<resources>
    <string name="app_name">MyAppPortfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Title">My Nanodegree Apps!</string>
    <string name="Spotify_Streamer">Spotify Streamer</string>
    <string name="Scores_App">Scores App</string>
    <string name="Library_App">Library App</string>
    <string name="Capstone_My_Own_App">Capstone: My Own App</string>
    <string name="XYZ_Reader">XYZ Reader</string>
    <string name="Build_It_Bigger">Build It Bigger</string>
</resources>
