<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/Title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_alignParentRight="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:textSize="@dimen/abc_text_size_title_material" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/framelayout"
        android:layout_centerHorizontal="true"
        android:paddingTop="60dp">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Spotify_Streamer"
                android:id="@+id/spodifyStreamerButton"
                android:layout_gravity="center_horizontal|top"
                android:background="#f08c35"
                android:onClick="spodifyStreamer"
                android:padding="5dp"
                android:shadowColor="#000000"
                android:singleLine="false"
                android:enabled="true" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Scores_App"
                android:id="@+id/scoresAppButton"
                android:layout_gravity="center_horizontal"
                android:onClick="scoresApp"
                android:background="#f08c35"
                android:layout_marginTop="5dp"
                android:padding="5dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Library_App"
                android:id="@+id/libraryAppButton"
                android:layout_gravity="center_horizontal"
                android:onClick="libraryApp"
                android:background="#f08c35"
                android:layout_marginTop="5dp"
                android:padding="5dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Build_It_Bigger"
                android:id="@+id/buildItBiggerButton"
                android:layout_gravity="center_horizontal"
                android:onClick="buildItBigger"
                android:background="#f08c35"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:focusable="true" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/XYZ_Reader"
                android:id="@+id/xyzReaderButton"
                android:layout_gravity="center_horizontal"
                android:onClick="xyzReader"
                android:background="#f08c35"
                android:layout_marginTop="5dp"
                android:padding="5dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Capstone_My_Own_App"
                android:id="@+id/capstoneButton"
                android:layout_gravity="center_horizontal"
                android:onClick="capstoneApp"
                android:background="#ff1100"
                android:layout_marginTop="5dp"
                android:padding="5dp" />

        </LinearLayout>

    </FrameLayout>

</RelativeLayout>
